# fks_api

./: Dockerfile  Dockerfile.simple  README.md  README_SHARED.md  SHARED_DOCKER_GUIDE.md  TIMEZONE_SUCCESS.md  build.sh  docker-compose.dev.yml  docker-compose.original.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.pull-only.yml  docker-compose.shared.yml  docker-compose.yml  entrypoint.sh  migrate-to-shared.sh  pyproject.toml  pytest.ini  requirements.txt  setup-shared-resources.sh  sitecustomize.py  start.sh  test_timezone.py  validate_imports.py
.github/scripts/: check_legacy_imports.py  coverage_check.py
.github/staging/: ci.yml  docker-images-build.yml  fks_api-ci.yml
.github/workflows/: codebase-analysis.yml  compose-aggregate-check.yml  docker-build-push.yml  fks_api-ci.yml  monitoring-config-validate.yml  tests.yml
docs/: ML_API_GUIDE.md
k8s/: health-checks.yaml
shared_python/: __init__.py
src/: app.py  config.py  fastapi_main.py  main.py  pyproject.toml  requirements.txt  standalone_shared.py
src/api/routes/: health.py
src/fks_api/: __init__.py  app.py
src/framework/middleware/: auth.py
src/middleware/: auth.py  circuit_breaker.py  cors.py  metrics.py  rate_limit.py  security.py
src/routers/: active_assets.py  backtest_v1_stub.py  backtests_simple.py  data_quality.py  data_service.py  dataset.py  docs.py  ollama_proxy.py  optimization.py  signals.py  strategies.py  trading_sessions.py  transformer_ingest.py
src/routes/: __init__.py
src/routes/monitoring/: models.py  routes.py
src/routes/v1/: __init__.py  admin.py  auth.py  backtest.py  backtesting.py  data.py  health.py  job_endpoints.py  job_manager.py  market_data.py  ml.py  orders.py  positions.py  sentiment.py  status.py  strategies.py  strategy.py  trading.py  training.py  visualization.py  watcher.py
src/services/: data_service.py
src/services/data/: __init__.py  active_assets.py  manager.py
src/tests/: test_health.py  test_shared_import.py
src/utils/: __init__.py  timezone.py
